[package]
name = "hari-aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config= { version = "0.55.0" }
aws-sdk-ec2= { version = "0.25.0" }
aws-types= { version = "0.55.0" }

[workspace]

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
